[metadata]
name = bring-api
version = 0.7.2
author = Cyrill Raccaud
author_email = cyrill.raccaud+pypi@gmail.com
description = Unofficial package to access Bring! shopping lists API.
long_description = file: README.md, CHANGELOG.md, LICENCE
long_description_content_type = text/markdown
license_files = LICENSE
url = https://github.com/miaucl/python-bring-api
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = 
    bring_api
    bring_api.locales
python_requires = >=3.11
install_requires =
    aiohttp
include_package_data = True

[options.package_data]
bring_api.locales =
    *.json